--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.4.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@tailwindcss/postcss": "^4.1.8",
     "framer-motion": "^11.11.17",
