--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@tailwindcss/postcss": "^4.1.8",
     "framer-motion": "^11.11.17",
+    "groq-sdk": "^0.23.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.3",
     "react": "^18",
