--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.2.9",
     "@google/genai": "^1.4.0",
     "@google/generative-ai": "^0.24.1",
     "@hello-pangea/dnd": "^17.0.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.8",
+    "add": "^2.0.6",
+    "ai": "^4.3.16",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.11.17",
     "groq-sdk": "^0.23.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
